# semantic-router

./: .gitattributes  .gitignore  AGENTS.md  CACHE_EMBEDDING_FINDINGS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  Dockerfile.extproc  Dockerfile.llm-katan  MARGIN_EVALUATION_RESULTS.md  Makefile  README.md  install.sh  lora-training-investigation.md  reactbits
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 001_feature_request.yaml  002_bug_report.yaml
.github/workflows/: ci-changes.yml  docker-publish.yml  docker-release.yml  helm-publish.yml  integration-test-k8s.yml  integration-test-memory.yml  integration-test-vllm-sr-cli.yml  operator-ci.yml  paper-build.yml  pre-commit.yml  publish-crate.yml  pypi-publish.yml
bench/cpu-vs-gpu/: README.md  bench-3way.sh  bench-long-context.sh  bench-sdpa-vs-fa.sh  config-bench.yaml  envoy-bench.yaml
candle-binding/: Cargo.toml  semantic-router.go  semantic-router_mock.go  semantic-router_test.go
candle-binding/examples/: embedding_benchmark.rs  mmbert_2d_matryoshka_bench.rs  test_32k_classifier_inference.rs  test_classifier_compatibility.rs  test_full_inference_32k.rs  test_layer_early_exit.rs  test_long_text_inference_32k.rs  test_lora_compatibility_32k.rs  test_lora_inference_32k.rs  test_mmbert_lora.rs  test_mmbert_real.rs  test_mmbert_variant.rs  test_modernbert_32k_validation.rs
candle-binding/src/: test_fixtures.rs
candle-binding/src/classifiers/: unified.rs
candle-binding/src/classifiers/lora/: parallel_engine.rs  parallel_engine_test.rs
candle-binding/src/core/: config_loader.rs
candle-binding/src/ffi/: classify.rs  embedding.rs  embedding_test.rs  generative_classifier.rs  init.rs  oncelock_concurrent_test.rs
candle-binding/src/model_architectures/: config.rs  model_factory.rs  routing.rs  traits.rs
candle-binding/src/model_architectures/embedding/: continuous_batch_scheduler.rs  dense_layers_test.rs  gemma3_model_test.rs  gemma_embedding_test.rs  mmbert_embedding.rs  mod.rs  qwen3_embedding.rs  qwen3_embedding_test.rs
candle-binding/src/model_architectures/generative/: continuous_batch_scheduler.rs  qwen3_guard.rs  qwen3_multi_lora_classifier.rs  qwen3_with_lora.rs
candle-binding/src/model_architectures/lora/: bert_lora.rs
candle-binding/src/model_architectures/traditional/: bert.rs  deberta_v3.rs  deberta_v3_test.rs  modernbert.rs  modernbert_test.rs
candle-binding/tests/: classification_output_demo.rs  qwen3_classification_api_test.rs
config/: config-rag-example.yaml  config.mmbert32k.yaml  config.yaml
config/demo/: config.egress-demo.yaml
config/multi-modal/: image_gen_config.yaml
config/onnx-binding/: config.onnx-binding-test.yaml  config.onnx-classifiers-test.yaml
config/semantic-cache/: config.hybrid.yaml
config/testing/: config.agent-smoke.amd.yaml  config.agent-smoke.cpu.yaml  config.crm-demo.yaml  config.e2e.yaml  config.image-gen.yaml  config.memory-user.yaml  config.multi-domain-cache.yaml  config.session-affinity-demo.yaml  envoy.session-affinity-demo.yaml  router-runtime.json
dashboard/: README.md
dashboard/backend/: Dockerfile  entrypoint.sh  go.mod  go.sum
dashboard/frontend/: package-lock.json  package.json
demo/openclaw-remote-memory/: OPENCLAW-REMOTE-MEMORY.md  benchmark-hybrid-memory.sh  e2e-benchmark.sh  openclaw-memory-only.yaml  openclaw-vsr-hybrid-memory.cast  vsr-openclaw.sh
deploy/amd/: README.md  claw-minimal.yaml  claw.yaml  config.yaml
deploy/kserve/: README.md  configmap-envoy-config-simulator.yaml  configmap-envoy-config.yaml  configmap-router-config-simulator.yaml  configmap-router-config.yaml  deploy.sh  deployment.yaml  install-gpu-operator.sh  install-kserve.sh  service-predictor-stable.yaml
docs/: RAG_OPENAI_GUIDE.md  agentic-memory-poc.md  domain-specific-cache-design.md
e2e/: README.md
e2e-tests/: 00-client-request-test.py  01-envoy-extproc-test.py  02-router-classification-test.py  03-classification-api-test.py  03-jailbreak-test.py  04-cache-test.py  05-pii-policy-test.py  06-a-test-pii-direct.py  06-pii-detection-test.py  06-tools-test.py  07-model-selection-test.py  07-router-path-selection-test.py  08-metrics-test.py  09-error-handling-test.py  README.md  TEST_STATUS_REPORT.md  mock-vllm-server.py  pii-confidence-benchmark.py  run_all_tests.py  start-mock-servers.sh  start-vllm-servers.sh  stop-vllm-servers.sh
examples/: rl_driven_selection.yaml
ml-binding/: Cargo.toml  README.md  go.mod  ml_binding.go
ml-binding/src/: ffi.rs  kmeans.rs  knn.rs  lib.rs  svm.rs
onnx-binding/: Cargo.toml  Dockerfile.fa-test  Dockerfile.rocm  README.md  build_in_docker.sh  fa_test.go  go.mod  semantic-router.go  semantic-router_test.go
onnx-binding/examples/: benchmark_cpu_vs_gpu.rs  benchmark_mmbert_latency.rs
onnx-binding/ort-ck-flash-attn/: CMakeLists.txt  Dockerfile  README.md
onnx-binding/ort-ck-flash-attn/include/: ck_flash_attn.h
onnx-binding/ort-ck-flash-attn/prebuilt/: libort_ck_flash_attn.so.1
onnx-binding/ort-ck-flash-attn/scripts/: rewrite_graph.py
onnx-binding/ort-ck-flash-attn/src/: ck_fmha_dispatch.hip  ort_custom_op.cpp
onnx-binding/ort-ck-flash-attn/tests/: test_fa_vs_sdpa.hip
onnx-binding/scripts/: build_rocm.sh  download_fa_models.py  export_2d_matryoshka.py  run_benchmark_rocm.sh  run_fa_tests.sh
onnx-binding/src/: lib.rs
onnx-binding/src/core/: gpu_memory.rs  mod.rs  unified_error.rs
onnx-binding/src/ffi/: classification.rs  embedding.rs  memory.rs  mod.rs  multimodal.rs  types.rs  unified.rs
onnx-binding/src/model_architectures/: mod.rs
onnx-binding/src/model_architectures/classification/: mmbert_classifier.rs  mod.rs
onnx-binding/src/model_architectures/embedding/: mmbert_embedding.rs  mod.rs  multimodal_embedding.rs  pooling.rs
paper/: main.tex
perf/: go.mod  go.sum
scripts/: check-i18n-outdated.sh  entrypoint.sh  export_classifiers_to_onnx.py  test-image-gen.sh  test_classification_api.sh  test_direct_api.sh  test_signal_api.sh  train-mmbert32k-gpu.sh
website/: README.md  docusaurus.config.ts  package.json  sidebars.ts
(+1230 files in other folders)
